--- a/postmails/templates/postmails/includes/inc_main_menu.html
+++ b/postmails/templates/postmails/includes/inc_main_menu.html
@@ -1,12 +1,12 @@
 {% load static %}
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal display-2">PerfumeStore</h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal display-2">Email-рассылка</h5>
 </div>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <div class="container-fluid">
         <img class="mb-4" src={% static 'logo.png' %} alt="" width="72" height="57">
-        <a class="navbar-brand" href="#">PerfumeStore</a>
+        <a class="navbar-brand" href="#">Email-рассылка</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,17 +14,23 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Каталог</a>
+                    <a class="nav-link active" aria-current="page" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/contact/">Контакты</a>
+                    <a class="nav-link active" aria-current="page" href="/">Список клиентов</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'materials:list' %}">Блог</a>
+                    <a class="nav-link active" aria-current="page" href="/">Мои рассылки</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Логи</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Мои письма</a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'users:logout' %}">Выход</a>
+                        <a class="nav-link active" aria-current="page" href="/">Выход</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'users:profile' %}">Профиль</a>
@@ -32,7 +38,7 @@
 
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'users:login' %}">Вход</a>
+                        <a class="nav-link active" aria-current="page" href="/">Вход</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'users:register' %}">Регистрация</a>
