--- a/postmails/templates/postmails/index.html
+++ b/postmails/templates/postmails/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>PerfumeStore</title>
+    <title>Email рассылка</title>
 </head>
 <body>
 {% include 'postmails/includes/inc_main_menu.html' %}
@@ -15,23 +15,24 @@
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
         <div class="col-12 col-md">
-            PerfumeStore
+            Email рассылка
             <small class="d-block mb-3 text-muted">&copy; 2024</small>
         </div>
         <div class="col-6 col-md">
             <h5>Категории</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Женская парфюмерия</a></li>
-                <li><a class="text-muted" href="#">Мужская парфюмерия</a></li>
-                <li><a class="text-muted" href="#">Парфюм унисекс</a></li>
-                <li><a class="text-muted" href="#">Нишевая парфюмерия</a></li>
-                <li><a class="text-muted" href="#">Наборы парфюмерии</a></li>
+                <li><a class="text-muted" href="#">Главная</a></li>
+                <li><a class="text-muted" href="#">Клиенты</a></li>
+                <li><a class="text-muted" href="#">Рассылки</a></li>
+                <li><a class="text-muted" href="#">Блог</a></li>
+                <li><a class="text-muted" href="#">Личный кабинет</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
             <h5>Дополнительно</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Как подобрать свой аромат</a></li>
+                <li><a class="text-muted" href="#">Примеры email-рассылок</a></li>
+                <li><a class="text-muted" href="#">Руководство пользователя</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
